--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,57 +1,38 @@
 <!-- Navigation -->
-<!-- <nav class="navbar navbar-light bg-light static-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Start Bootstrap</a>
-    <a class="btn btn-primary" href="#">Sign In</a>
-  </div>
-</nav> -->
-
-<!-- Masthead -->
-<header class="masthead text-white text-center">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-xl-9 mx-auto">
-        <h1 class="mb-5">Quidditch Scotland landing page</h1>
-      </div>
+    <a class="navbar-brand" href="#">Quidditch Scotland</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">News</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Squad</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Fixtures</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Footage</a>
+        </li>
+      </ul>
     </div>
   </div>
-</header>
+</nav>
 
-<!-- Icons Grid -->
-<section class="features-icons bg-light text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4">
-        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
-            <i class="fas fa-quidditch m-auto text-primary"></i>
-          </div>
-          <h3>About us</h3>
-          <p class="lead mb-0">Find out more about Quidditch Scotland!</p>
-        </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
-            <i class="fas fa-trophy m-auto text-primary"></i>
-          </div>
-          <h3>Fixtures</h3>
-          <p class="lead mb-0">Check up on upcoming and past matches for the national team!</p>
-        </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
-            <i class="fas fa-users m-auto text-primary"></i>
-          </div>
-          <h3>Players</h3>
-          <p class="lead mb-0">Meet the current squad representing Team Scotland!</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<router-outlet></router-outlet>
 
 <!-- Footer -->
 <footer class="footer bg-light">
