UI tweaks for landing page

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 mx-auto">
-        <h1 class="mb-5">Quidditch Scotland landing page</h1>
+        <h1 class="mb-5"></h1>
       </div>
     </div>
   </div>
