--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home
+          <a class="nav-link" routerLink="/">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">News</a>
+          <a class="nav-link" routerLink="/news">News</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Squad</a>
