Format markdown and set up article service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,10 +35,10 @@
 <router-outlet></router-outlet>
 
 <!-- Footer -->
-<footer class="footer bg-light">
+<footer class="footer bg-light my-5">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+      <div class="col-lg-6 text-center text-lg-left my-auto">
         <ul class="list-inline mb-2">
           <li class="list-inline-item">
             <a href="#">About</a>
@@ -58,7 +58,7 @@
         </ul>
         <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
       </div>
-      <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+      <div class="col-lg-6 text-center text-lg-right my-auto">
         <ul class="list-inline mb-0">
           <li class="list-inline-item mr-3">
             <a href="#">
