--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -8,13 +8,13 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-7">
-            <a href="#">
+            <a routerLink="/article/{{article.id}}">
               <img class="img-fluid rounded mb-3 mb-md-0" src="{{getImage(article)}}" alt="">
             </a>
           </div>
           <div class="col-md-5">
             <h3>{{article.title}}</h3>
-            <a class="card-link card-bottom" href="#">Read more..</a>
+            <a class="card-link card-bottom" routerLink="/article/{{article.id}}">Read more..</a>
           </div>
         </div>
       </div>
@@ -25,19 +25,5 @@
 
     </div>
   </div>
-
-
-  <!--<div *ngFor="let article of articles" class="card">
-    <div class="col-md-7">
-      <a href="#">
-        <img class="img-fluid rounded mb-3 mb-md-0" src="{{getImage(article)}}" alt="">
-      </a>
-    </div>
-    <div class="col-md-5">
-      <h3>{{article.title}}</h3>
-      <a href="#">Read more..</a>
-      <small class="text-muted">Published by {{article.author}} on {{article.date | date:fullDate}}</small>
-    </div>
-  </div>-->
 
 </div>
