--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,24 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 700;
 }
+
+markdown table {
+    border-spacing:0;
+    border-collapse:collapse;
+    margin-bottom:16px;
+}
+
+markdown table td, markdown table th {
+    padding:6px 13px;
+    border:1px solid #ddd;
+}
+
+markdown table tr:nth-child(2n) {
+    background-color: rgba(0,0,0,.03)!important;
+}
+
+markdown blockquote {
+    padding:0 1em;
+    color:rgba(0,0,0,.535);
+    border-left:.25em solid rgba(0,0,0,.11);
+}
