--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -14,7 +14,7 @@
       <markdown [data]="article.content"></markdown>
     </div>
     <div class="col-5">
-      <img src="{{article.image}}"/>
+      <img src="{{getImageUrl(article)}}"/>
     </div>
   </div>
 </div>
