--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -9,7 +9,7 @@
         <div class="row">
           <div class="col-md-7">
             <a routerLink="/article/{{article.id}}">
-              <img class="img-fluid rounded mb-3 mb-md-0" src="{{getImage(article)}}" alt="">
+              <img class="img-fluid rounded mb-3 mb-md-0" src="{{getImageUrl(article)}}" alt="">
             </a>
           </div>
           <div class="col-md-5">
