--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 <router-outlet></router-outlet>
 
 <!-- Footer -->
-<footer class="footer bg-light my-5">
+<footer class="footer bg-light mt-5">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 text-center text-lg-left my-auto">
