--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/news">News</a>
@@ -22,7 +22,7 @@
           <a class="nav-link" href="#">Squad</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Fixtures</a>
+          <a class="nav-link" href="/fixtures">Fixtures</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Footage</a>
@@ -41,7 +41,7 @@
       <div class="col-lg-6 text-center text-lg-left my-auto">
         <ul class="list-inline mb-2">
           <li class="list-inline-item">
-            <a href="#">About</a>
+            <a href="/about">About</a>
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
