--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -17,7 +17,7 @@
       <div class="col-lg-4">
         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
           <div class="features-icons-icon d-flex">
-            <i class="fas fa-quidditch m-auto text-primary"></i>
+            <i class="fas fa-quidditch m-auto text-primary"><a routerLink="/about"></a></i>
           </div>
           <h3>About us</h3>
           <p class="lead mb-0">Find out more about Quidditch Scotland!</p>
@@ -25,18 +25,18 @@
       </div>
       <div class="col-lg-4">
         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
+          <a class="features-icons-icon d-flex" routerLink="/fixtures">
             <i class="fas fa-trophy m-auto text-primary"></i>
-          </div>
+          </a>
           <h3>Fixtures</h3>
           <p class="lead mb-0">Check up on upcoming and past matches for the national team!</p>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
+          <a class="features-icons-icon d-flex" routerLink="/squad">
             <i class="fas fa-users m-auto text-primary"></i>
-          </div>
+          </a>
           <h3>Players</h3>
           <p class="lead mb-0">Meet the current squad representing Team Scotland!</p>
         </div>
