--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -10,10 +10,10 @@
   <h1 class="my-4">{{article.title}}</h1>
   <hr/>
   <div class="row">
-    <div class="col-7">
+    <div class="col-lg-7">
       <markdown [data]="article.content"></markdown>
     </div>
-    <div class="col-5">
+    <div class="col-lg-5">
       <img src="{{getImageUrl()}}"/>
     </div>
   </div>
