--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -44,6 +44,10 @@ header.masthead h1 {
 .features-icons .features-icons-item .features-icons-icon {
     height: 7rem;
 }
+
+.features-icons .features-icons-item a.features-icons-icon:hover {
+    text-decoration: none;
+}
   
 .features-icons .features-icons-item .features-icons-icon i {
     font-size: 4.5rem;
