--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -16,9 +16,9 @@
     <div class="row">
       <div class="col-lg-4">
         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-          <div class="features-icons-icon d-flex">
-            <i class="fas fa-quidditch m-auto text-primary"><a routerLink="/about"></a></i>
-          </div>
+          <a class="features-icons-icon d-flex" routerLink="/about">
+            <i class="fas fa-quidditch m-auto text-primary"></i>
+          </a>
           <h3>About us</h3>
           <p class="lead mb-0">Find out more about Quidditch Scotland!</p>
         </div>
