--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#">Terms of Use</a>
+            <a routerLink="terms-conditions">Terms of Use</a>
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
