--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -12,26 +12,26 @@
       <div class="card-body">
 
         <div class="row">
-          <div class="col-2">
+          <div class="col-md-2 col-6">
             <img src="/assets/images/QuidditchLogo.png" height="{{height}}">
           </div>
-          <div class="col-2">
+          <div class="col-md-3 col-6">
             <h5>Team Scotland</h5>
           </div>
-          <div class="col-4">
+          <div class="col-md-2 col-12">
             <h5>{{fixture.score}}</h5>
           </div>
-          <div class="col-2">
+          <div class="col-md-3 col-6">
             <h5>{{fixture.opposition}}</h5>
           </div>
-          <div class="col-2">
+          <div class="col-md-2 col-6">
             <img src="http://placehold.it/100x100" height="{{height}}">
           </div>
         </div>
 
         <div class="row">
           <div class="col-12">
-            <h6 class="text-muted">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
+            <h6 class="text-muted mt-2 mb-0">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
           </div>
         </div>
 
@@ -48,26 +48,26 @@
       <div class="card-body">
 
         <div class="row">
-          <div class="col-2">
+          <div class="col-md-2 col-6">
             <img src="/assets/images/QuidditchLogo.png" height="{{height}}">
           </div>
-          <div class="col-2">
+          <div class="col-md-3 col-6">
             <h5>Team Scotland</h5>
           </div>
-          <div class="col-4">
+          <div class="col-md-2 col-12">
             <h5>- vs -</h5>
           </div>
-          <div class="col-2">
+          <div class="col-md-3 col-6">
             <h5>{{fixture.opposition}}</h5>
           </div>
-          <div class="col-2">
+          <div class="col-md-2 col-6">
             <img src="http://placehold.it/100x100" height="{{height}}">
           </div>
         </div>
 
         <div class="row">
           <div class="col-12">
-            <h6 class="text-muted">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
+            <h6 class="text-muted mt-2 mb-0">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
           </div>
         </div>
 
