Collapse nav toggle on route change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,30 +2,30 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">Quidditch Scotland</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <button #navbarToggler class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/">Home
+          <a (click)="collapseNav()" class="nav-link" routerLink="/">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about">About</a>
+          <a (click)="collapseNav()" class="nav-link" routerLink="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/news">News</a>
+          <a (click)="collapseNav()" class="nav-link" routerLink="/news">News</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Squad</a>
+          <a (click)="collapseNav()" class="nav-link" href="#">Squad</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/fixtures">Fixtures</a>
+          <a (click)="collapseNav()" class="nav-link" routerLink="/fixtures">Fixtures</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Footage</a>
+          <a (click)="collapseNav()" class="nav-link" href="#">Footage</a>
         </li>
       </ul>
     </div>
