--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,24 +7,24 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a (click)="collapseNav()" class="nav-link" routerLink="/">Home
+        <li class="nav-item" [ngClass]="isActive('/')? 'active' : ''">
+          <a (click)="collapseNav()" class="nav-link"  routerLink="/">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [ngClass]="isActive('/about')? 'active' : ''">
           <a (click)="collapseNav()" class="nav-link" routerLink="/about">About</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [ngClass]="isActive('/news')? 'active' : ''">
           <a (click)="collapseNav()" class="nav-link" routerLink="/news">News</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [ngClass]="isActive('/squad')? 'active' : ''">
           <a (click)="collapseNav()" class="nav-link" href="#">Squad</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [ngClass]="isActive('/fixtures')? 'active' : ''">
           <a (click)="collapseNav()" class="nav-link" routerLink="/fixtures">Fixtures</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [ngClass]="isActive('/footage')? 'active' : ''">
           <a (click)="collapseNav()" class="nav-link" href="#">Footage</a>
         </li>
       </ul>
