News mobile optimisations

--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -14,7 +14,7 @@
       <markdown [data]="article.content"></markdown>
     </div>
     <div class="col-lg-5">
-      <img src="{{getImageUrl()}}"/>
+      <img class="img-fluid" src="{{getImageUrl()}}"/>
     </div>
   </div>
 </div>
