Add tags to articles

--- a/src/app/components/news/news.component.css
+++ b/src/app/components/news/news.component.css
@@ -1,3 +1,17 @@
 div.card {
     margin: 10px;
 }
+
+span.badge {
+    margin: 2px;
+}
+
+div.tags {
+    margin-top: 1rem;
+}
+
+@media (min-width: 768px) {
+    div.tags {
+        margin-top: 40%;
+    }
+}
