--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -9,6 +9,7 @@
 
   <h1 class="my-4">{{article.title}}</h1>
   <hr/>
+
   <div class="row">
     <div class="col-lg-7">
       <markdown [data]="article.content"></markdown>
@@ -17,5 +18,13 @@
       <img class="img-fluid" src="{{getImageUrl()}}"/>
     </div>
   </div>
+
+  <hr/>
+
+  <div class="mt-3">
+    <p class="text-muted" style="display:inline;">Tags: </p>
+    <span *ngFor="let tag of article.tags" class="badge badge-primary">{{tag}}</span>
+  </div>
 </div>
+
   
