Mobile opt squad component

--- a/src/app/components/squad/squad.component.html
+++ b/src/app/components/squad/squad.component.html
@@ -1,7 +1,7 @@
 <div class="container main-container">
   <h1 class="my-4">Meet the Squad</h1>
   <div class="row">
-    <div *ngFor="let player of players" class="col-lg-3 col-md-4 my-4">
+    <div *ngFor="let player of players" class="col-lg-3 col-md-4 col-sm-6 my-4">
       <app-player-card [player]="player"></app-player-card>
     </div>
   </div>
