Remove footage component link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,9 +24,9 @@
         <li class="nav-item" [ngClass]="isActive('/fixtures')? 'active' : ''">
           <a (click)="collapseNav()" class="nav-link" routerLink="/fixtures">Fixtures</a>
         </li>
-        <li class="nav-item" [ngClass]="isActive('/footage')? 'active' : ''">
+        <!--<li class="nav-item" [ngClass]="isActive('/footage')? 'active' : ''">
           <a (click)="collapseNav()" class="nav-link" href="#">Footage</a>
-        </li>
+        </li>-->
       </ul>
     </div>
   </div>
