--- a/src/app/components/squad/squad.component.html
+++ b/src/app/components/squad/squad.component.html
@@ -1,5 +1,18 @@
+<!-- Masthead -->
+<header class="masthead text-white text-center">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="title col-xl-9 mx-auto">
+        <h1 class="mb-5">Meet the Squad</h1>
+        <app-arrow scrollId="squad"></app-arrow>
+      </div>
+    </div>
+  </div>
+</header>
+
 <div class="container main-container">
-  <h1 class="my-4">Meet the Squad</h1>
+  <h1 id="squad" class="my-4">Meet the Squad</h1>
   <div class="row">
     <div *ngFor="let player of players" class="col-lg-3 col-md-4 col-sm-6 my-4">
       <app-player-card [player]="player"></app-player-card>
