Add image to news component

--- a/src/app/components/news/news.component.css
+++ b/src/app/components/news/news.component.css
@@ -1,3 +1,8 @@
+header.masthead {
+    background: url("/assets/images/news.jpg") no-repeat center center;
+    background-size: cover;
+}
+
 div.card {
     margin: 10px;
 }
