--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -14,6 +14,11 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 54px;
     min-height: 86vh;
 }
+
+div.anchor {
+    position: relative;
+    top: -54px;
+}
   
 @media (min-width: 992px) {
     .main-container {
