--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -1,77 +1,91 @@
-<div class="main-container container">
-    <h1 class="my-4">Fixtures</h1>
-    <hr/>
-
-    <div class="line-title">
-      <span class="text-muted">
-        Past Fixtures
-      </span>
-    </div>
-
-    <div *ngFor="let fixture of pastFixtures" class="card text-center">
-      <div class="card-body">
-
-        <div class="row">
-          <div class="col-md-2 col-6">
-            <img src="/assets/images/QuidditchLogo.png" height="{{height}}">
-          </div>
-          <div class="col-md-3 col-6">
-            <h5>Team Scotland</h5>
-          </div>
-          <div class="col-md-2 col-12">
-            <h5>{{fixture.score}}</h5>
-          </div>
-          <div class="col-md-3 col-6">
-            <h5>{{fixture.opposition}}</h5>
-          </div>
-          <div class="col-md-2 col-6">
-            <img src="http://placehold.it/100x100" height="{{height}}">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-12">
-            <h6 class="text-muted mt-2 mb-0">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
-          </div>
-        </div>
-
+<!-- Masthead -->
+<header class="masthead text-white text-center">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="title col-xl-9 mx-auto">
+        <h1 class="mb-5">Fixtures</h1>
+        <app-arrow scrollId="fixtures" colour="white"></app-arrow>
       </div>
     </div>
-
-    <div class="line-title mt-5">
-      <span class="text-muted">
-        Upcoming Fixtures
-      </span>
-    </div>
-
-    <div *ngFor="let fixture of upcomingFixtures" class="card text-center">
-      <div class="card-body">
-
-        <div class="row">
-          <div class="col-md-2 col-6">
-            <img src="/assets/images/QuidditchLogo.png" height="{{height}}">
-          </div>
-          <div class="col-md-3 col-6">
-            <h5>Team Scotland</h5>
-          </div>
-          <div class="col-md-2 col-12">
-            <h5>- vs -</h5>
-          </div>
-          <div class="col-md-3 col-6">
-            <h5>{{fixture.opposition}}</h5>
-          </div>
-          <div class="col-md-2 col-6">
-            <img src="http://placehold.it/100x100" height="{{height}}">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-12">
-            <h6 class="text-muted mt-2 mb-0">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
   </div>
+</header>
+  
+<div class="main-container container">
+
+  <div id="fixtures" class="anchor"></div>
+  <hr/>
+
+  <div class="line-title">
+    <span class="text-muted">
+      Past Fixtures
+    </span>
+  </div>
+
+  <div *ngFor="let fixture of pastFixtures" class="card text-center">
+    <div class="card-body">
+
+      <div class="row">
+        <div class="col-md-2 col-6">
+          <img src="/assets/images/QuidditchLogo.png" height="{{height}}">
+        </div>
+        <div class="col-md-3 col-6">
+          <h5>Team Scotland</h5>
+        </div>
+        <div class="col-md-2 col-12">
+          <h5>{{fixture.score}}</h5>
+        </div>
+        <div class="col-md-3 col-6">
+          <h5>{{fixture.opposition}}</h5>
+        </div>
+        <div class="col-md-2 col-6">
+          <img src="http://placehold.it/100x100" height="{{height}}">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <h6 class="text-muted mt-2 mb-0">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="line-title mt-5">
+    <span class="text-muted">
+      Upcoming Fixtures
+    </span>
+  </div>
+
+  <div *ngFor="let fixture of upcomingFixtures" class="card text-center">
+    <div class="card-body">
+
+      <div class="row">
+        <div class="col-md-2 col-6">
+          <img src="/assets/images/QuidditchLogo.png" height="{{height}}">
+        </div>
+        <div class="col-md-3 col-6">
+          <h5>Team Scotland</h5>
+        </div>
+        <div class="col-md-2 col-12">
+          <h5>- vs -</h5>
+        </div>
+        <div class="col-md-3 col-6">
+          <h5>{{fixture.opposition}}</h5>
+        </div>
+        <div class="col-md-2 col-6">
+          <img src="http://placehold.it/100x100" height="{{height}}">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <h6 class="text-muted mt-2 mb-0">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
