--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,29 +49,31 @@
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a routerLink="terms-conditions">Terms of Use</a>
+            <a routerLink="/terms-conditions">Terms of Use</a>
           </li>
           <li class="list-inline-item">&sdot;</li>
           <li class="list-inline-item">
             <a routerLink="/privacy-policy">Privacy Policy</a>
           </li>
         </ul>
-        <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+        <p class="text-muted small mb-4 mb-lg-0">&copy; Quidditch Scotland 2019. All Rights Reserved.</p>
+        <p class="text-muted small mb-4 mb-lg-0">Photo credits: Guillermo Parra, Axel 
+          (<a href="https://www.facebook.com/BocsFolls/">Bocs Folls Quidditch</a>)</p>
       </div>
       <div class="col-lg-6 text-center text-lg-right my-auto">
         <ul class="list-inline mb-0">
           <li class="list-inline-item mr-3">
-            <a href="#">
+            <a href="https://www.facebook.com/Quidditch-Scotland-237692856920828/">
               <i class="fab fa-facebook fa-2x fa-fw"></i>
             </a>
           </li>
           <li class="list-inline-item mr-3">
-            <a href="#">
+            <a href="https://twitter.com/QuidditchScot">
               <i class="fab fa-twitter-square fa-2x fa-fw"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="#">
+            <a href="https://www.instagram.com/quidditchscotland">
               <i class="fab fa-instagram fa-2x fa-fw"></i>
             </a>
           </li>
