--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,20 @@
+<!-- Masthead -->
+<header class="masthead text-white text-center">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="title col-xl-9 mx-auto">
+        <h1 class="mb-5">About Quidditch Scotland</h1>
+        <app-arrow scrollId="about" colour="white"></app-arrow>
+      </div>
+    </div>
+  </div>
+</header>
+  
 <div class="main-container container">
-  <h1 class="my-4">About</h1>
+
+  <div id="about" class="anchor"></div>
+  <hr/>
   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet tellus eu risus euismod tincidunt. Vivamus tincidunt massa vel nulla consequat, sit amet pharetra eros faucibus. Nulla non sagittis mauris, sit amet viverra dolor. Aenean semper purus ullamcorper metus consequat, vel ultricies lectus vestibulum. Nam tempor consequat urna, eget pellentesque felis maximus sit amet. Nulla sed purus ultricies, lobortis neque in, vehicula felis. Proin consectetur eros sapien, id aliquam arcu convallis non. Aliquam quis sapien odio. Nulla facilisi. Ut sit amet dui et justo viverra varius molestie in urna. Curabitur efficitur nec metus id blandit. Phasellus fermentum aliquet leo, et lobortis velit vehicula vitae.
 
     Aliquam pellentesque malesuada nibh, nec pharetra odio luctus blandit. Fusce pretium consequat mi non sodales. Vestibulum rhoncus dolor eget tincidunt mattis. Nullam ac maximus ipsum, sed vestibulum leo. Donec efficitur nibh non mauris consectetur fringilla. Proin eget ornare turpis, ac tempor arcu. Proin nunc libero, ullamcorper vitae semper quis, commodo non ex. Nullam auctor quam lectus, eget interdum diam facilisis ac.
