--- a/src/app/components/fixtures/fixtures.component.css
+++ b/src/app/components/fixtures/fixtures.component.css
@@ -1,5 +1,5 @@
 header.masthead {
-    background: url("/assets/images/fixtures.jpg") no-repeat center center;
+    background: url("/assets/images/fixtures-full.jpg") no-repeat center center;
     background-size: cover;
 }
 
