--- a/src/app/components/news/news.component.css
+++ b/src/app/components/news/news.component.css
@@ -1,5 +1,5 @@
 header.masthead {
-    background: url("/assets/images/news.jpg") no-repeat center center;
+    background: url("/assets/images/news-full.jpg") no-repeat center center;
     background-size: cover;
 }
 
