Update photo credit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
           </li>
         </ul>
         <p class="text-muted small mb-4 mb-lg-0">&copy; Quidditch Scotland 2019. All Rights Reserved.</p>
-        <p class="text-muted small mb-4 mb-lg-0">Photo credits: Guillermo Parra, Axel 
+        <p class="text-muted small mb-4 mb-lg-0">Photo credits: Guillermo Parra, Axel Casas
           (<a href="https://www.facebook.com/BocsFolls/">Bocs Folls Quidditch</a>)</p>
       </div>
       <div class="col-lg-6 text-center text-lg-right my-auto">
