Add content to site

--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -39,7 +39,7 @@
           <h5>{{fixture.opposition}}</h5>
         </div>
         <div class="col-md-2 col-6">
-          <img src="http://placehold.it/100x100" height="{{height}}">
+          <img src="{{getTeamImage(fixture)}}" height="{{height}}">
         </div>
       </div>
 
