--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -15,42 +15,42 @@
 
   <div id="about" class="anchor"></div>
   <hr/>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Curabitur sit amet tellus eu risus euismod tincidunt. Vivamus
-    tincidunt massa vel nulla consequat, sit amet pharetra eros faucibus.
-    Nulla non sagittis mauris, sit amet viverra dolor. Aenean semper purus
-    ullamcorper metus consequat, vel ultricies lectus vestibulum. Nam tempor
-    consequat urna, eget pellentesque felis maximus sit amet. Nulla sed purus
-    ultricies, lobortis neque in, vehicula felis. Proin consectetur eros
-    sapien, id aliquam arcu convallis non. Aliquam quis sapien odio. Nulla
-    facilisi. Ut sit amet dui et justo viverra varius molestie in urna.
-    Curabitur efficitur nec metus id blandit. Phasellus fermentum aliquet
-    leo, et lobortis velit vehicula vitae.
-  </p>
+  <h4>What is quidditch?</h4>
 
   <p>
-    Aliquam pellentesque malesuada nibh, nec pharetra odio luctus blandit.
-    Fusce pretium consequat mi non sodales. Vestibulum rhoncus dolor
-    eget tincidunt mattis. Nullam ac maximus ipsum, sed vestibulum leo.
-    Donec efficitur nibh non mauris consectetur fringilla. Proin eget
-    ornare turpis, ac tempor arcu. Proin nunc libero, ullamcorper vitae
-    semper quis, commodo non ex. Nullam auctor quam lectus, eget interdum
-    diam facilisis ac.
+    Quidditch is a fast-paced, mixed-gender, full contact sport that is rapidly
+    growing in popularity across the world. Invented in the USA in 2005, the
+    sport has since spread across the world and is now played in more than 40 countries. 
   </p>
     
   <p>
-    Proin placerat vel turpis nec lacinia. Vestibulum ante ipsum primis
-    in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam
-    feugiat nibh turpis, sollicitudin porttitor nisl dictum sed. Cras
-    facilisis mauris euismod, vehicula felis ut, placerat metus. Donec
-    in erat tincidunt, semper augue et, ullamcorper urna. Proin varius
-    mollis libero vestibulum tristique. Morbi blandit fringilla venenatis.
-    Aenean bibendum odio nec libero euismod, sit amet dictum ante convallis.
-    Nunc gravida orci diam, vel porta diam pulvinar id. Etiam vulputate in
-    lectus eget luctus. Ut tristique, sem eu tristique elementum, sem dui
-    hendrerit nisl, eget ornare sapien diam sed felis. Nulla nec magna in
-    libero malesuada egestas a id ante
+    Quidditch players compete to score goals by throwing a quaffle (deflated volleyball)
+    through the opposing team’s hoops while avoiding being hit by bludgers (dodgeballs)
+    thrown by the opposing team’s beaters. The game ends when the snitch, a tennis ball
+    attached to an impartial official, is caught by one team’s seeker. 
   </p>
+
+  <p>Click <a href="https://www.iqasport.com/history">here</a> for more information on the history of quidditch</p>
+
+  <hr/>
+  <h4>Quidditch in Scotland</h4>
+
+  <p>Scottish quidditch is governed by QuidditchUK, our national governing body. There are four currently
+    operational Scottish quidditch clubs based in Edinburgh, Glasgow, St Andrews and Stirling. Scottish
+    teams have been an integral part of the UK quidditch landscape since the sport was first introduced
+    to the country in 2011 and continue to place highly at national tournaments and represent the UK internationally.
+  </p>
+
+  <p>Click <a href="https://www.quidditchuk.org/">here</a> for more information on QuidditchUK and club-level quidditch</p>
+
+  <hr/>
+  <h4>The Scottish National Quidditch Team</h4>
+  <p>
+      Formed in 2018, the Scottish National Quidditch Team represents Scotland internationally. Drawing from a strong
+      pool of club-level talent, Team Scotland’s coaches select and train the most promising athletes in the Scottish
+      game with the aim of developing a strong and cohesive core from which to select a team to compete for Scotland
+      internationally. 
+  </p>
+
 </div>
   
