--- a/src/app/components/contact-form/contact-form.component.css
+++ b/src/app/components/contact-form/contact-form.component.css
@@ -4,7 +4,29 @@
     padding: 10px;
 }
 
-.bigicon {
-    font-size: 35px;
-    color: #36A0FF;
+.ng-valid[required], .ng-valid.required  {
+    border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form):not(.ng-untouched)  {
+    border-left: 5px solid #a94442; /* red */
+}
+
+.alert {
+    margin-top: 5px;
+}
+
+.alert p{
+    margin-bottom: 0px;
+}
+
+.contact-form.blur {
+    opacity: 0.3;
+}
+
+h1.success-message {
+    position: relative;
+    top: 30vh;
+    text-align: center;
+    z-index: 4;
 }
