--- a/src/app/components/player-card/player-card.component.html
+++ b/src/app/components/player-card/player-card.component.html
@@ -1,7 +1,7 @@
-<div class="card">
+<div class="card shadow-lg rounded">
   <img class="card-img-top img-fluid" src="{{getPhoto()}}" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">{{player.name}} - {{player.number}}</h5>
+    <h5 class="card-title">{{player.name}}</h5>
     <hr>
     <p class="card-text"><b>Positions: </b> {{player.positions | array}}</p>
     <p class="card-text"><b>Experience: </b> {{player.startedPlaying | experience}}</p>
