Update todo list

--- a/src/app/components/squad/squad.component.html
+++ b/src/app/components/squad/squad.component.html
@@ -15,7 +15,7 @@
   <div id="squad" class="anchor"></div>
   <hr/>
   
-  <div class="row">
+  <div class="row card-deck">
     <div *ngFor="let player of players" class="col-lg-3 col-md-4 col-sm-6 my-4">
       <app-player-card [player]="player"></app-player-card>
     </div>
