Add spacing and shadow to fixtures

--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -22,7 +22,7 @@
     </span>
   </div>
 
-  <div *ngFor="let fixture of pastFixtures" class="card text-center">
+  <div *ngFor="let fixture of pastFixtures" class="card text-center shadow-lg rounded mb-3">
     <div class="card-body">
 
       <div class="row">
@@ -58,7 +58,7 @@
     </span>
   </div>
 
-  <div *ngFor="let fixture of upcomingFixtures" class="card text-center">
+  <div *ngFor="let fixture of upcomingFixtures" class="card text-center shadow-lg rounded mb-3">
     <div class="card-body">
 
       <div class="row">
