Replace landing page cover with flag

--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -1,5 +1,5 @@
 header.masthead {
-    background: url("/assets/images/Social_Title.png") no-repeat center center;
+    background: url("/assets/images/flag.png") no-repeat center right;
     background-size: cover;
 }
 
