--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -3,8 +3,8 @@
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
-      <div class="col-xl-9 mx-auto">
-        <h1 class="mb-5"></h1>
+      <div class="col-xs-4 title-box">
+        <h1 class="cover-title">QUIDDITCH SCOTLAND</h1>
       </div>
     </div>
   </div>
