--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,22 +65,22 @@
         </ul>
         <p class="text-muted small mb-4 mb-lg-0">&copy; Quidditch Scotland 2019. All Rights Reserved.</p>
         <p class="text-muted small mb-4 mb-lg-0">Photo credits: Guillermo Parra, Axel Casas
-          (<a href="https://www.facebook.com/BocsFolls/">Bocs Folls Quidditch</a>)</p>
+          (<a href="https://www.facebook.com/BocsFolls/" target="_blank">Bocs Folls Quidditch</a>)</p>
       </div>
       <div class="col-lg-6 text-center text-lg-right my-auto">
         <ul class="list-inline mb-0">
           <li class="list-inline-item mr-3">
-            <a href="https://www.facebook.com/Quidditch-Scotland-237692856920828/">
+            <a href="https://www.facebook.com/Quidditch-Scotland-237692856920828/" target="_blank">
               <i class="fab fa-facebook fa-2x fa-fw"></i>
             </a>
           </li>
           <li class="list-inline-item mr-3">
-            <a href="https://twitter.com/QuidditchScot">
+            <a href="https://twitter.com/QuidditchScot" target="_blank">
               <i class="fab fa-twitter-square fa-2x fa-fw"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://www.instagram.com/quidditchscotland">
+            <a href="https://www.instagram.com/quidditchscotland" target="_blank">
               <i class="fab fa-instagram fa-2x fa-fw"></i>
             </a>
           </li>
