--- a/src/app/components/article/article.component.css
+++ b/src/app/components/article/article.component.css
@@ -2,6 +2,21 @@
     font-size: 2rem;
 }
 
+.back-text {
+    display:inline;
+    position: relative;
+    left: 10px;
+    bottom: 7px;
+}
+
+.photo-credit {
+    text-align: right;
+}
+
+.photo-credit a {
+    color: #6c757d;
+}
+
 span.badge {
     margin: 2px;
 }
