--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -1,9 +1,9 @@
 <div class="main-container container">
 
-  <div class="my-4">
+  <div class="my-5">
     <a class="back" routerLink="/news">
       <i class="fas fa-arrow-left"></i>
-      <p class="text-muted" style="display:inline; margin-left: 10px">Back to news</p>
+      <p class="text-muted back-text" style="display:inline; margin-left: 10px">Back to news</p>
     </a>
   </div>
 
@@ -16,6 +16,11 @@
     </div>
     <div class="col-lg-5">
       <img class="img-fluid" src="{{getImageUrl()}}"/>
+      <div *ngIf="article.photoCredit" class="mt-3">
+        <p class="text-muted photo-credit">
+          Photo &copy; <a href="{{article.creditLink}}" target="_blank">{{article.photoCredit}}</a>
+        </p>
+      </div>
     </div>
   </div>
 
