Add multiple sized cover images for better loading optimisation

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,4 +1,18 @@
 header.masthead {
-    background: url("/assets/images/about-full.jpg") no-repeat center center;
+    background: url("/assets/images/covers/about-sm.jpg") no-repeat center center;
     background-size: cover;
+}
+
+@media (min-width: 768px) {
+    header.masthead {
+        background: url("/assets/images/covers/about-md.jpg") no-repeat center center;
+        background-size: cover;
+    }
+}
+
+@media (min-width: 1440px) {
+    header.masthead {
+        background: url("/assets/images/covers/about-lg.jpg") no-repeat center center;
+        background-size: cover;
+    }
 }
