--- a/src/app/components/squad/squad.component.css
+++ b/src/app/components/squad/squad.component.css
@@ -1,6 +1,20 @@
 header.masthead {
-    background: url("/assets/images/team-full.jpg") no-repeat center center;
+    background: url("/assets/images/covers/team-sm.jpg") no-repeat center center;
     background-size: cover;
+}
+
+@media (min-width: 768px) {
+    header.masthead {
+        background: url("/assets/images/covers/team-md.jpg") no-repeat center center;
+        background-size: cover;
+    }
+}
+
+@media (min-width: 1440px) {
+    header.masthead {
+        background: url("/assets/images/covers/team-lg.jpg") no-repeat center center;
+        background-size: cover;
+    }
 }
 
 div.title{
