--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -3,7 +3,7 @@
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
-      <div class="col-xs-4 title-box">
+      <div class="col-xs-12 col-lg-8 title-box title">
         <h1 class="cover-title">QUIDDITCH SCOTLAND</h1>
       </div>
     </div>
