--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -22,10 +22,14 @@ header.masthead {
 }
 
 .cover-title {
-    text-shadow: 2px 2px #444444;
-    text-align: center;
     font-family: 'Montserrat Alternates', sans-serif;
     margin: 0px 10px;
+}
+
+@media (min-width: 992px){
+    .cover-title {
+        text-align: left;
+    }
 }
 
 .features-icons {
