--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -17,3 +17,10 @@ div.anchor {
     }
 }
 
+.title h1 {
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+                    0px 8px 13px rgba(0,0,0,0.1),
+                    0px 18px 23px rgba(0,0,0,0.1);
+    text-align: center;
+}
+
