--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
         </li>-->
         <li class="nav-item">
           <a class="nav-link" target="_blank" href="https://www.quidditchuk.org/">QuidditchUK
-              <img src="https://www.quidditchuk.org/wp-content/uploads/2017/09/cropped-QUK-Logo-1-Full-Colour-1.png" width="25">
+              <img src="assets/images/quk.png" width="25">
           </a>
         </li>
       </ul>
