Add player searching and filtering by position

--- a/src/app/components/squad/squad.component.css
+++ b/src/app/components/squad/squad.component.css
@@ -21,3 +21,11 @@ div.title{
     position: relative;
     top: 20px;
 }
+
+.tool-bar {
+    margin: 0px;
+}
+
+.btn:focus {
+    box-shadow: none !important;
+}
