--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -18,7 +18,9 @@
       <img class="img-fluid" src="{{getImageUrl()}}"/>
       <div *ngIf="article.photoCredit" class="mt-3">
         <p class="text-muted photo-credit">
-          Photo &copy; <a href="{{article.creditLink}}" target="_blank">{{article.photoCredit}}</a>
+          Photo &copy; 
+          <a [hidden]="!article.creditLink" href="{{article.creditLink}}" target="_blank">{{article.photoCredit}}</a>
+          <span [hidden]="article.creditLink">{{article.photoCredit}}</span>
         </p>
       </div>
     </div>
