Change date pipe

--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="card-footer text-muted">
-          Published by {{article.author}} on {{article.date | date:fullDate}}
+          Published by {{article.author}} on {{article.date | date:'fullDate'}}
       </div>
 
     </div>
