--- a/src/app/components/fixture/fixture.component.html
+++ b/src/app/components/fixture/fixture.component.html
@@ -21,7 +21,7 @@
 
     <div class="row">
       <div class="col-12">
-        <h6 class="text-muted mt-2 mb-0">{{fixture.date | date:fullDate}} - {{fixture.location}}</h6>
+        <h6 class="text-muted mt-2 mb-0">{{fixture.date | date:'fullDate'}} - {{fixture.location}}</h6>
       </div>
     </div>
 
