--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,6 +84,11 @@
               <i class="fab fa-instagram fa-2x fa-fw"></i>
             </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/lukecmstevens/quidditch-scotland" target="_blank">
+              <i class="fab fa-github fa-2x fa-fw"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
