Add fixtures from european games

--- a/src/app/components/fixture/fixture.component.html
+++ b/src/app/components/fixture/fixture.component.html
@@ -6,7 +6,7 @@
         <img src="assets/images/QuidditchLogo.png" height="{{height}}">
       </div>
       <div class="col-md-3 col-6">
-        <h5>Team Scotland</h5>
+        <h5>Scotland</h5>
       </div>
       <div class="col-md-2 col-12">
         <h5>{{isPast()? fixture.score : '- vs -'}}</h5>
