Use a more descriptive slug for article urls

--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -27,7 +27,7 @@
           </div>
           <div class="col-md-5">
             <h3>{{article.title}}</h3>
-            <a class="card-link card-bottom" routerLink="/article/{{article.id}}">Read more..</a>
+            <a class="card-link card-bottom" routerLink="/article/{{article.name}}">Read more..</a>
 
             <div class="tags">
               <p class="text-muted" style="display:inline;">Tags: </p>
